# my-service-mgr

./: .gitignore  AGENTS.md  LICENSE  README.md  build.sh  install.sh  pyproject.toml  uninstall.sh
.githooks/: post-commit  pre-commit  pre-push
scripts/: bump_version.py  dummy-alpha.sh  dummy-beta.sh
services/: dummy-alpha.service  dummy-beta.service
src/my_service_mgr/: __init__.py  cli.py  manager.py  tui.py  versioning.py
tests/: test_manager.py  test_tui.py  test_versioning.py
